# weightbridge

./: .gitignore  README.md  pyproject.toml
examples/: train.py
tests/: test_query_receivers_metadata.py  test_shard_compatibility.py
wbridge/: __init__.py
wbridge/backend/: __init__.py  direct_sender.py
wbridge/frontend/: __init__.py  receiver.py  sender.py
wbridge/utils/: data.py  distributed.py
wbridge/utils/megatron_utils/: __init__.py  qwen2.py
wbridge/utils/sglang_utils/: __init__.py  qwen2.py
